--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Ken Wall | Front End Developer</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bio.css">
     <script src="js/miniNav.js" async defer></script>
   </head>
@@ -30,9 +29,48 @@
       <a href="contact.html">Contact</a>
     </nav>
 
-    <div class="container">
+    <div class="bio-container">
 
       <section class='bio'>
+
+        <h2>Biography</h2><br>
+
+        <h3>Capabilities</h3>
+        <p>With a firm rooting in HTML, CSS and
+        JavaScript, I am most comfortable working with front end technologies.
+        Going beyond front end, I also have a firm rooting
+        in back-end development learned by creating full-stack
+        apps with Rails. I have a basic understanding of UI/UX, which I am
+        looking to advance. My passion as a developer lies in
+        creating content that is functional
+        and visually appealing without being
+        overly complicated.</p>
+
+        <h3>Aspirations</h3>
+        <p>To become a great front end developer but also have the capabilities to be fully
+        autonomous as both a back end developer and web designer.</p>
+
+        <h3>Background</h3>
+        <p>Having a life-long interest in both history and politics,
+        theses are the topics I studied at university. I worked on
+        political campaigns, and in both government and law. Additionally,
+        my passion for food and cooking have led me to employment as a cook
+        at various periods throughout my life, mostly as a way to earn an
+        income while studying another field.</p>
+
+        <h3>Current Focus</h3>
+        <p>Mastering Vue and becoming a
+        "passable"-reword designer</p>
+
+        <h3>Other Interests</h3>
+        <p>-Love travel and culture. Regularly read, journal, socialize and
+        exercise, cook and see new places</p>
+
+        <div class="btns">
+          <button type="button" class="main-btn"><a href="KennethWall.docx" download>download<br>resume</a></button>
+          <button type="button" class="btn-red"><a target="_blank" href="https://github.com/kwall925">github</a></button>
+        </div>
+
 
       </section>
 
