--- a/bio.html
+++ b/bio.html
@@ -53,7 +53,8 @@
 
         <h3>Aspirations</h3>
         <p>To become a <em>great</em> front end developer but also have the capabilities to be fully
-        autonomous as both a back end developer and web designer (I am aware that this is not easy and will take a long time).</p>
+        autonomous as both a back end developer and web designer. Although this is a difficult task, this is
+        what I would like to acheive.</p>
 
         <h3>Background</h3>
         <p>Having a life-long interest in both history and politics,
