--- a/bio.html
+++ b/bio.html
@@ -43,7 +43,7 @@
         <h3>Capabilities</h3>
         <p>With a firm rooting in HTML, CSS and
         JavaScript, I am most comfortable working with front end technologies.
-        Going beyond front end, I also have significant exposure
+        Going beyond front end, I have significant exposure
         in back-end development learned by creating full-stack
         apps with Rails. I have a basic understanding of UI/UX, which I am
         currently advancing. My passion as a developer lies in
@@ -53,18 +53,16 @@
 
         <h3>Aspirations</h3>
         <p>To become a <em>great</em> front end developer but also have the capabilities to be fully
-        autonomous as both a back end developer and web designer. Although this is a difficult task, this is
-        what I would like to acheive.</p>
+        autonomous as both a back end developer and web designer.</p>
 
         <h3>Background</h3>
         <p>Having a life-long interest in both history and politics,
         these are the topics I studied in university. I have worked on
         political campaigns, in government, and in law. Additionally,
-        my passion for food and cooking have led me to employment as a cook
-        at various periods throughout my life to earn extra income.</p>
+        I have worked in many restaurants throughout life and maintain a passion for food and cooking.</p>
 
         <h3>Current Focus</h3>
-        <p>Repetition with Vue JS until it becomes second nature.</p>
+        <p>Vue JS</p>
 
         <h3>Other Interests</h3>
         <p>I love travel and culture. I regularly read, journal, socialize,
